Multilingual support updated with automatic language saving

--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -90,6 +90,7 @@
       ]
     },
     "footer":{
-      "title":"Kontakt aufnehmen"
+      "title":"Kontakt aufnehmen",
+      "address": "Casablanca , Marokko"
     }
 } 
