--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -94,6 +94,7 @@
       ]
     },
     "footer":{
-      "title":"Get in touch"
+      "title":"Get in touch",
+      "address":"Casablanca , Morocco"
     }
 }  
