--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -90,6 +90,7 @@
       ]
     },
     "footer":{
-      "title":"Contactez-moi"
+      "title":"Contactez-moi",
+      "address":"Casablanca , Maroc"
     }
 } 
