--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -15,32 +15,11 @@
       "title": "Expériences",
       "items": [
         {
-          "year": "2023 - Présent",
-          "role": "Développeur Full Stack Senior",
-          "company": "Google Inc.",
-          "description": "Dirigé une équipe dans le développement et la maintenance d'applications web utilisant JavaScript, React.js et Node.js. Mise en place d'API RESTful et intégration avec des bases de données MongoDB. Collaboration avec les parties prenantes pour définir les exigences du projet et les délais.",
-          "technologies": ["JavaScript", "React.js", "Next.js", "mongoDB"]
-        },
-        {
-          "year": "2022 - 2023",
-          "role": "Développeur Frontend",
-          "company": "Adobe",
-          "description": "Conçu et développé des interfaces utilisateur pour des applications web en utilisant Next.js et React. Collaboration étroite avec les développeurs backend pour intégrer les composants frontend avec des API Node.js. Mise en œuvre de designs responsives et optimisation des performances frontend.",
-          "technologies": ["HTML", "CSS", "Vue.js", "mySQL"]
-        },
-        {
-          "year": "2021 - 2022",
-          "role": "Développeur Full Stack",
-          "company": "Facebook",
-          "description": "Développé et maintenu des applications web en utilisant JavaScript, React.js et Node.js. Conception et mise en œuvre d'API RESTful pour la communication des données. Collaboration avec des équipes transverses pour livrer des produits logiciels de haute qualité dans les délais.",
-          "technologies": ["Python", "Svelte", "Three.js", "Postgres"]
-        },
-        {
-          "year": "2020 - 2021",
-          "role": "Ingénieur Logiciel",
-          "company": "Paypal",
-          "description": "Contribué au développement d'applications web en utilisant JavaScript, React.js et Node.js. Gestion des bases de données et mise en œuvre de solutions de stockage de données avec MongoDB. Collaboration étroite avec les chefs de produit pour prioriser les fonctionnalités et améliorations.",
-          "technologies": ["Ruby", "Rails", "PHP", "Sqlite"]
+          "year": "04/2025 - Présent",
+          "role": "Développeur Full Stack Junior",
+          "company": "M-Automotiv",
+          "description": "Responsable du développement et de la maintenance d'applications web utilisant React.js, Laravel et Node.js. Implémentation d’API RESTful et intégration avec des bases de données MongoDB. Collaboration étroite avec les parties prenantes pour définir les besoins et les délais des projets.",
+          "technologies": ["React.js", "Laravel", "MongoDB", "Tailwind CSS"]
         }
       ]
     },
@@ -48,43 +27,58 @@
       "title": "Projets",
       "items": [
         {
-          "title": "Site E-Commerce",
-          "image": "/assets/projects/project-1.jpg",
-          "description": "Un site e-commerce entièrement fonctionnel avec des fonctionnalités telles que l'affichage des produits, le panier d'achat et l'authentification des utilisateurs.",
-          "technologies": ["HTML", "CSS", "React", "Node.js", "MongoDB"],
-          "github":{
-            "message": "Consulter la documentation GitHub",
-            "url": "https://www.fotmob.com/de"
+          "title": "Site Portfolio Personnel",
+          "image": "",
+          "description":
+            "Développement d'un site portfolio contenant mes informations, expériences, projets et technologies utilisées, avec une section de contact.",
+          "technologies": ["React.js", "Tailwind CSS"],
+          "github": {
+            "message": "Consult the GitHub documentation",
+            "url": "https://github.com/aymennnb/aymen-nabaoui-dev"
           }
         },
         {
-          "title": "Application de Gestion des Tâches",
-          "image": "/assets/projects/project-2.jpg",
-          "description": "Une application pour gérer les tâches et les projets, avec des fonctionnalités telles que la création, l'attribution et le suivi de l'avancement des tâches.",
-          "technologies": ["HTML", "CSS", "Angular", "Firebase"],
-          "github":{
-            "message": "Consulter la documentation GitHub",
-            "url": "https://www.fotmob.com/de"
+          "title": "Application de Gestion RH",
+          "image": "",
+          "description":
+            "Application web pour gérer les employés, leurs contrats, salaires et congés, avec tableau de bord pour le suivi global en entreprise.",
+          "technologies": ["React.js", "Laravel", "MySQL", "CSS"],
+          "github": {
+            "message": "Consult the GitHub documentation",
+            "url": "https://github.com/aymennnb/GRH"
           }
         },
         {
-          "title": "Site Portfolio",
-          "image": "/assets/projects/project-3.jpg",
-          "description": "Un site personnel de portfolio présentant des projets, des compétences et des informations de contact.",
-          "technologies": ["HTML", "CSS", "React", "Bootstrap"],
-          "github":{
-            "message": "Consulter la documentation GitHub",
-            "url": "https://www.fotmob.com/de"
+          "title": "Système de Gestion Scolaire",
+          "image": "",  
+          "description":
+            "Plateforme scolaire permettant la gestion des étudiants, enseignants, matières, classes et l'affectation d'années académiques.",
+          "technologies": ["Laravel", "MySQL", "CSS"],
+          "github": {
+            "message": "Consult the GitHub documentation",
+            "url": "https://github.com/aymennnb/SchoollManagementAPP"
           }
         },
         {
-          "title": "Plateforme de Blog",
-          "image": "/assets/projects/project-4.jpg",
-          "description": "Une plateforme pour créer et publier des articles de blog, avec des fonctionnalités telles que l’édition de texte enrichi, les commentaires et les profils utilisateurs.",
-          "technologies": ["HTML", "CSS", "Vue.js", "Express", "mySQL"],
-          "github":{
-            "message": "Consulter la documentation GitHub",
-            "url": "https://www.fotmob.com/de"
+          "title": "Plateforme d'Inscription des Stagiaires",
+          "image": "",
+          "description":
+            "Site web pour l'enregistrement, la validation ou le refus de stagiaires selon leurs données personnelles et critères d'acceptation.",
+          "technologies": ["PHP", "MySQL", "Bootstrap", "CSS", "JavaScript"],
+          "github": {
+            "message": "Consult the GitHub documentation",
+            "url": "https://github.com/aymennnb/trainee-registration-management"
+          }
+        },
+        {
+          "title": "Boutique de Vêtements en Ligne",
+          "image": "",
+          "description":
+            "Site e-commerce de vêtements réalisé avec HTML et CSS, comprenant catégories, produits disponibles, contact et infos boutique.",
+          "technologies": ["HTML", "CSS"],
+          "github": {
+            "message": "Consult the GitHub documentation",
+            "url": "https://github.com/aymennnb/fashion-ecommerce"
           }
         }
       ]
