--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -1,84 +1,70 @@
 {
     "hero": {
       "name": "Nabaoui Aymen",
-      "position": "Full Stack Entwickler",
-      "description": "Ich bin ein leidenschaftlicher Full Stack Entwickler mit einer Begabung für die Erstellung robuster und skalierbarer Webanwendungen. Mit 5 Jahren praktischer Erfahrung habe ich meine Fähigkeiten in Front-End-Technologien wie React und Next.js sowie in Back-End-Technologien wie Node.js, MySQL, PostgreSQL und MongoDB geschärft. Mein Ziel ist es, meine Expertise zu nutzen, um innovative Lösungen zu schaffen, die das Unternehmenswachstum fördern und außergewöhnliche Benutzererlebnisse liefern."
+      "position": "Full-Stack-Webentwickler",
+      "description": "Ich bin ein Full-Stack-Webentwickler und in der Lage, robuste, skalierbare und leistungsstarke Webanwendungen zu erstellen. Ich habe Kenntnisse in Frontend-Technologien wie React, Angular und Redux sowie in Backend-Technologien wie Node.js, Laravel und PHP und in der Verwaltung von SQL- und NoSQL-Datenbanken erworben. Mein Ziel ist es, meine Expertise einzusetzen, um innovative Lösungen zu entwickeln, die das Unternehmenswachstum fördern und hochwertige Benutzererfahrungen bieten."
     },
     "about": {
       "title": "Über mich",
-      "description": "Ich bin ein engagierter und vielseitiger Full Stack Entwickler mit einer Leidenschaft für die Erstellung effizienter und benutzerfreundlicher Webanwendungen. Mit 5 Jahren beruflicher Erfahrung habe ich mit einer Vielzahl von Technologien gearbeitet, darunter React, Next.js, Node.js, MySQL, PostgreSQL und MongoDB. Meine Reise im Webentwicklungsbereich begann mit einer tiefen Neugierde, wie Dinge funktionieren, und hat sich zu einer Karriere entwickelt, in der ich kontinuierlich bestrebt bin, zu lernen und mich an neue Herausforderungen anzupassen. Ich gedeihe in kollaborativen Umfeldern und genieße es, komplexe Probleme zu lösen, um qualitativ hochwertige Lösungen zu liefern. Abgesehen vom Coden bleibe ich gerne aktiv, entdecke neue Technologien und trage zu Open-Source-Projekten bei."
+      "description": "Ich bin ein frischgebackener Absolvent im Bereich digitale Entwicklung, spezialisiert auf Full-Stack-Webentwicklung zu Beginn meiner Karriere, mit Schwerpunkt auf dem Entwurf und der Umsetzung moderner Webanwendungen. Mein Weg in der Webentwicklung begann mit einer großen Neugier, wie Dinge funktionieren, und hat sich zu einer Karriere entwickelt, in der ich bestrebt bin, ständig zu lernen und mich neuen Herausforderungen anzupassen. Durch meine Ausbildung und praktischen Projekte habe ich fundierte Kenntnisse in Technologien wie React, Node.js, Angular, Laravel, MySQL und MongoDB erworben und dabei kollaborative Tools wie GitHub, GitLab, Jira und Docker genutzt. Was mich am meisten motiviert, ist die Möglichkeit, eine Idee in eine konkrete, intuitive und hochwertige Lösung für die Nutzer umzusetzen. Ich lege großen Wert auf Organisation, sauberen Code und die kontinuierliche Verbesserung meiner Fähigkeiten."
     },
     "technologies": {
       "title":"Technologien"
     },
     "Experience": {
       "title": "Erfahrungen",
+      "techusing" : "Verwendete Technologien",
       "items": [
         {
-          "year": "04/2025 - Gegenwart",
-          "role": "Junior Full Stack Entwickler",
+          "year": "14.04.2025 - 17.05.2025",
+          "role": "Praktikum als Full-Stack-Webentwickler",
           "company": "M-Automotiv",
-          "description": "Leitete die Entwicklung und Wartung von Webanwendungen unter Verwendung von React.js, Laravel und Node.js. Implementierte RESTful APIs und integrierte sie mit MongoDB-Datenbanken. Enge Zusammenarbeit mit Stakeholdern zur Definition von Anforderungen und Zeitplänen.",
-          "technologies": ["React.js", "Laravel", "MongoDB", "Tailwind CSS"]
-        }        
+          "description": "Praktikum im Rahmen meiner Ausbildung, dessen Hauptziel die Konzeption und Entwicklung einer vollständigen Webanwendung für die Geolokalisierung und Dokumentenverwaltung der Standorte des Unternehmens M-AUTOMOTIV in Marokko war.",
+          "technologies": ["React.js", "Laravel", "MySQL", "Tailwind CSS", "Figma", "UML"]
+        }       
       ]
     },
     "Projects": {
       "title": "Projekte",
       "items": [
         {
-          "title": "Persönliche Portfolio-Website",
-          "image": "",
-          "description":
-            "Entwicklung einer Portfolio-Website mit Informationen über mich, meine Erfahrungen, Projekte, genutzte Technologien und einem Kontaktbereich.",
-          "technologies": ["React.js", "Tailwind CSS"],
+          "title": "Webanwendung zur Standort-Geolokalisierung und Dokumentenverwaltung",
+          "image": "../assets/projects/geoloca.png",
+          "description": "M-LOCATION ist eine vollständige Webanwendung zur Geolokalisierung von Standorten und Dokumentenverwaltung für das Unternehmen M-AUTOMOTIV. Sie ermöglicht es den Benutzern, Standorte auf einer interaktiven Karte zu visualisieren, zugehörige Dokumente zu verwalten und den Zugriff gemäß den Benutzerrollen zu steuern.",
+          "technologies": ["React.js", "Laravel", "Leaflet API", "Inertia.js", "MySQL", "Tailwind CSS"],
           "github": {
-            "message": "GitHub-Dokumentation einsehen",
-            "url": "https://github.com/aymennnb/aymen-nabaoui-dev"
-          }
-        },
-        {
-          "title": "HR-Management-Anwendung",
-          "image": "",
-          "description":
-            "Webanwendung zur Verwaltung von Mitarbeitern, Verträgen, Gehältern und Urlauben mit einem Dashboard zur Gesamtübersicht in KMU.",
-          "technologies": ["React.js", "Laravel", "MySQL", "CSS"],
-          "github": {
-            "message": "GitHub-Dokumentation einsehen",
+            "message": "Projekt auf GitHub ansehen",
             "url": "https://github.com/aymennnb/GRH"
           }
         },
         {
-          "title": "Schulverwaltungssystem",
-          "image": "",
-          "description":
-            "Bildungsplattform zur Verwaltung von Schülern, Lehrern, Fächern, Klassen und der Zuweisung von Schuljahren.",
-          "technologies": ["Laravel", "MySQL", "CSS"],
+          "title": "HR-Management-Anwendung",
+          "image": "../assets/projects/hrConnect.png",
+          "description": "HR-Connect ist eine Webanwendung zur Verwaltung von Personalressourcen eines Unternehmens, wie Mitarbeiter, Abteilungen, Verträge, Gehälter und Urlaub, mit einem Dashboard für die Gesamtübersicht und Aktivitätsprotokolle.",
+          "technologies": ["React.js", "Laravel", "MySQL", "Inertia.js", "Tailwind CSS"],
           "github": {
-            "message": "GitHub-Dokumentation einsehen",
-            "url": "https://github.com/aymennnb/SchoollManagementAPP"
+            "message": "Projekt auf GitHub ansehen",
+            "url": "https://github.com/aymennnb/GRH"
           }
         },
         {
-          "title": "Praktikumsverwaltungsplattform",
-          "image": "",
-          "description":
-            "Webanwendung zur Registrierung, Validierung oder Ablehnung von Praktikanten basierend auf persönlichen Daten und Annahmekriterien.",
-          "technologies": ["PHP", "MySQL", "Bootstrap", "CSS", "JavaScript"],
+          "title": "Plattform zur Registrierung von Praktikanten",
+          "image": "../assets/projects/trainee_registration.png",
+          "description": "Diese Webanwendung ermöglicht die Registrierung von Praktikanten, die Bestätigung oder Ablehnung ihrer Bewerbungen basierend auf persönlichen Informationen und vordefinierten Kriterien. Sie erleichtert die Verwaltung der Anmeldungen.",
+          "technologies": ["PHP", "HTML", "MySQL", "Bootstrap", "CSS", "JavaScript"],
           "github": {
-            "message": "GitHub-Dokumentation einsehen",
+            "message": "Projekt auf GitHub ansehen",
             "url": "https://github.com/aymennnb/trainee-registration-management"
           }
         },
         {
-          "title": "Online-Kleidungsgeschäft",
-          "image": "",
-          "description":
-            "E-Commerce-Website für Kleidung mit HTML und CSS, inklusive Kategorien, verfügbaren Produkten, Kontaktformular und Shop-Infos.",
-          "technologies": ["HTML", "CSS"],
+          "title": "Tic Tac Toe Spiel",
+          "image": "../assets/projects/TicTacToe.png",
+          "description": "Dieses Tic Tac Toe Spiel ist ein Mini-Projekt, das zwei Spielern ermöglicht, gegeneinander anzutreten. Es erkennt automatisch den Gewinner oder ein Unentschieden und bietet die Möglichkeit, das Spiel neu zu starten.",
+          "technologies": ["HTML", "CSS", "JavaScript"],
           "github": {
-            "message": "GitHub-Dokumentation einsehen",
-            "url": "https://github.com/aymennnb/fashion-ecommerce"
+            "message": "Projekt auf GitHub ansehen",
+            "url": "https://github.com/aymennnb/Tic-Tac-Toe-Game"
           }
         }
       ]
